--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,17 @@
-# Compiled class file
-*.class
-
-# Log file
+.*
+!.gitignore
+!.gitkeep
+*.iml
 *.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+*.bak
 *.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
+logs/*
+bin/
+target/
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.tar.gz
+*.tgz
+*.zip
+*.log.*
+
+
